@@ -1,4 +1,4 @@
-From 58f0df44f5da3f83a5c0dc1b554ddf2d7099046e Mon Sep 17 00:00:00 2001
+From 7785c99603e754d6c20a7923450d7a19eed0cd07 Mon Sep 17 00:00:00 2001
 From: Martin Pitt <martin.pitt@ubuntu.com>
 Date: Thu, 8 Sep 2011 09:14:02 +0200
 Subject: [PATCH] Consistently treat gdkenumtypes.[hc] as source files
@@ -8,14 +8,17 @@ introspection sources. With this, gdkenumtypes.c is correctly included with
 separate build trees, too. This fixes missing GTypes in the .gir when using a
 separate build tree.
 
-Bug: https://bugzilla.gnome.org/show_bug.cgi?id=647729
-Bug-Ubuntu: https://launchpad.net/bugs/769256
+Also remove the gdk/stamp-gdkenumtypes.h target. It was forcing the
+regeneration of gdk/gdkenumtypes.h even if it was already present and current
+in the source tree.
+
+https://bugzilla.gnome.org/show_bug.cgi?id=647729
 ---
- gdk/Makefile.am |    8 ++++----
- 1 files changed, 4 insertions(+), 4 deletions(-)
+ gdk/Makefile.am |   17 +++++++----------
+ 1 files changed, 7 insertions(+), 10 deletions(-)
 
 diff --git a/gdk/Makefile.am b/gdk/Makefile.am
-index c7f24af..e7972d4 100644
+index c7f24af..d918db0 100644
 --- a/gdk/Makefile.am
 +++ b/gdk/Makefile.am
 @@ -185,8 +185,8 @@ if HAVE_INTROSPECTION
@@ -29,14 +32,30 @@ index c7f24af..e7972d4 100644
  
  Gdk-3.0.gir: libgdk-3.la Makefile
  Gdk_3_0_gir_SCANNERFLAGS = 	\
-@@ -320,13 +320,13 @@ gdkenumtypes.h: stamp-gdkenumtypes.h
- stamp-gdkenumtypes.h: @REBUILD@ $(gdk_public_h_sources) gdkenumtypes.h.template
+@@ -303,7 +303,7 @@ endif
+ 
+ lib_LTLIBRARIES = libgdk-3.la
+ 
+-MAINTAINERCLEANFILES = $(gdk_built_sources) stamp-gdkenumtypes.h
++MAINTAINERCLEANFILES = $(gdk_built_sources)
+ EXTRA_DIST += $(gdk_built_sources)
+ 
+ install-exec-hook:
+@@ -315,18 +315,15 @@ BUILT_SOURCES = \
+ 	$(gdk_built_sources)			\
+ 	gdkconfig.h
+ 
+-gdkenumtypes.h: stamp-gdkenumtypes.h
+-	@true
+-stamp-gdkenumtypes.h: @REBUILD@ $(gdk_public_h_sources) gdkenumtypes.h.template
++gdkenumtypes.h: @REBUILD@ $(gdk_public_h_sources) $(srcdir)/gdkenumtypes.h.template
  	$(AM_V_GEN) ( cd $(srcdir) && $(GLIB_MKENUMS) --template gdkenumtypes.h.template \
  		$(gdk_public_h_sources) ) >> xgen-geth \
 -	&& (cmp -s xgen-geth gdkenumtypes.h || cp xgen-geth gdkenumtypes.h ) \
+-	&& rm -f xgen-geth \
+-	&& echo timestamp > $(@F)
 +	&& (cmp -s xgen-geth gdkenumtypes.h || cp xgen-geth $(srcdir)/gdkenumtypes.h ) \
- 	&& rm -f xgen-geth \
- 	&& echo timestamp > $(@F)
++	&& rm -f xgen-geth 
  gdkenumtypes.c: @REBUILD@ $(gdk_public_h_sources) gdkenumtypes.c.template
  	$(AM_V_GEN) ( cd $(srcdir) && $(GLIB_MKENUMS) --template gdkenumtypes.c.template \
  		$(gdk_public_h_sources) ) > xgen-getc \
