@@ -5,6 +5,8 @@ gtk+3.0 (3.1.90-0ubuntu1) UNRELEASED; urgency=low
     get as close to 3.1.91 as we can:
     - 3 small bug fixes.
     - 4 translation updates.
+  * 101_gdkenumtypes.c_location.patch: Update to the current version sent to
+    upstream, which also works with distcheck.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 15 Sep 2011 05:43:45 +0200
 
